force-app/main/default/objects/Account/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <label>Animal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deer</fullName>
            </value>
            <value>
                <fullName>Lion</fullName>
            </value>
            <value>
                <fullName>Tiger</fullName>
            </value>
            <value>
                <fullName>Zebra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>