force-app/main/default/objects/Account/fields/email2__c.field-meta.xml
<CustomField>
    <fullName>email2__c</fullName>
    <label>email2</label>
    <type>Email</type>
</CustomField>