force-app/main/default/objects/Account/fields/email3__c.field-meta.xml
<CustomField>
    <fullName>email3__c</fullName>
    <label>email3</label>
    <type>Email</type>
</CustomField>