force-app/main/default/objects/Account/fields/LongtestTextAreaField__c.field-meta.xml
<CustomField>
    <fullName>LongtestTextAreaField__c</fullName>
    <label>Long Text Area Field</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>