force-app/main/default/objects/Account/fields/Testi__c.field-meta.xml
<CustomField>
    <fullName>Testi__c</fullName>
    <label>Testi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>