force-app/main/default/objects/Account/fields/Testin__c.field-meta.xml
<CustomField>
    <fullName>Testin__c</fullName>
    <label>Testin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>