force-app/main/default/objects/Account/fields/Testing__c.field-meta.xml
<CustomField>
    <fullName>Testing__c</fullName>
    <label>Testing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>