force-app/main/default/objects/Account/recordTypes/Record_A.recordType-meta.xml
<RecordType>
    <fullName>Record_A</fullName>
    <active>true</active>
    <label>Record A</label>
</RecordType>